log/build_2026-07-23_16-57-00/theimc_bt_nodes/stderr.log
/home/jeff/theimc_robot/src/theimc_bt_nodes/src/register_nodes.cpp:12:1: error: ‘include’ does not name a type
   12 | include "theimc_bt_nodes/is_battery_low.hpp"
      | ^~~~~~~
gmake[2]: *** [CMakeFiles/theimc_bt_nodes.dir/build.make:174: CMakeFiles/theimc_bt_nodes.dir/src/register_nodes.cpp.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/theimc_bt_nodes.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
